--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,11 @@ a {
 a:hover {
   color: #535bf2;
 }
-
+p {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
 body {
   margin: 0;
   display: flex;
